Chat layout, text wrap, scroll down resolved

--- a/public/assets/css/cus/chat.scss
+++ b/public/assets/css/cus/chat.scss
@@ -8,7 +8,7 @@ body {
   text-rendering: optimizeLegibility;
 }
 
-.container {
+.chat-container {
   margin: 60px auto;
   background: #fff;
   padding: 0;
@@ -82,10 +82,10 @@ input {
 .conversation{
 	height: 500px;
 	overflow-x: scroll;
-	display: flex;
+	/* display: flex;
 	flex: 5;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-between; */
 }
 .friend-drawer {
   padding: 10px 15px;
@@ -135,7 +135,7 @@ hr {
 }
 
 .chat-bubble {
-  padding: 20px 30px;
+  padding: 10px 15px;
   background: #eee;
   margin: 10px 30px;
   border-radius: 9px;
@@ -183,7 +183,7 @@ hr {
 }
 
 
-.offset-md-9 {
+.offset-md-7 {
   .chat-bubble {
     background: $blue;
     color: #fff;
